Implemented Rendering Handler and added a way to spawn models per-player